--- a/TaxiApp/Pages/MainPage.xaml
+++ b/TaxiApp/Pages/MainPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TaxiApp.MainPage">
+             x:Class="TaxiApp.MainPage"
+             Background="Gray">
 
-    <ScrollView>
+    <ScrollView >
         <VerticalStackLayout
             Spacing="25"
             Padding="30,0"
@@ -11,28 +12,37 @@
 
             <Frame
                 WidthRequest="300"
-                Padding="5"
+                Padding="15"
                 Margin="0, 10, 0, 0"
                 BackgroundColor="White">
                 <StackLayout>
                     <Label
-                        Text="Welcome to .NET Multi-platform App UI"
+                        Text="Войти"
                         FontSize="18"
                         HorizontalOptions="Center"
-                        TextColor="Gray"
+                        TextColor="#222"
                         HorizontalTextAlignment="Center"/>
-                    <Entry Placeholder="Введите номер телефона"
+                    
+                    <Entry 
+                           x:Name="PhoneEntry"
+                           Keyboard="Telephone"
+                           Placeholder="Введите номер телефона"
                            TextColor="#222"
                            Margin="0, 5, 0, 0"/>
-                    <Entry Placeholder="Введите код"
+                    <Entry 
+                           x:Name="CodeEntry"
+                           Placeholder="Введите код"
+                           IsVisible="False"
                            TextColor="#222"
                             Margin="0, 5, 0, 0"/>
                     
-                    <Button 
+                    <Button
+                        Clicked="Send_Clicked"
                         Text="Отправить"
                         Margin="0, 5, 0, 0"
                         TextColor="#222"
-                        Background="Green"/>
+                        Background="Green"
+                        CornerRadius="25"/>
                 </StackLayout>
             </Frame>
 
