--- a/TaxiApp/Pages/OrderPage.xaml
+++ b/TaxiApp/Pages/OrderPage.xaml
@@ -2,18 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TaxiApp.Pages.OrderPage"
-             Title="OrderPage">
-    <ScrollView >
-        <VerticalStackLayout
-    Spacing="25"
-    Padding="30,0"
-    VerticalOptions="Center">
+             Title="Новый заказ">
+    
+    <ScrollView>
+        <Frame>
+            <VerticalStackLayout
+                Spacing="25"
+                Padding="30,0"
+                VerticalOptions="Center">
 
-        <Frame
-        WidthRequest="300"
-        Padding="15"
-        Margin="0, 10, 0, 0"
-        BackgroundColor="White">
+                <HorizontalStackLayout Margin="10, 10, 10, 10">
+                    <Button x:Name="DefautButton" Text="Поездка" Clicked="DefautButton_Clicked" TextColor="Black" HeightRequest="75" WidthRequest="100" Margin="5" Background="#f6f6f6" BorderWidth="2" BorderColor="#e0e0e0"></Button>
+                    <Button x:Name="InterCityButton" Text="Межгород" Clicked="InterCityButton_Clicked" TextColor="Black" HeightRequest="75" WidthRequest="100" Margin="5" Background="#f6f6f6" BorderWidth="2" BorderColor="#e0e0e0"></Button>
+                    <Button x:Name="CargoButton" Text="Грузовые" Clicked="CargoButton_Clicked" TextColor="Black" HeightRequest="75" WidthRequest="100" Margin="5" Background="#f6f6f6" BorderWidth="2" BorderColor="#e0e0e0"></Button>
+                </HorizontalStackLayout>
+
                 <StackLayout>
                     <Label
                     Text="Новый заказ"
@@ -23,51 +26,54 @@
                     HorizontalTextAlignment="Center"/>
 
                     <Entry 
-                    x:Name="IDEntry"
-                    Placeholder="Введите ФИО"
+                    x:Name="FromEntry"
+                    Placeholder="Укажите точку отправления"
                     IsVisible="True"
                     TextColor="#222"
                     Margin="0, 5, 0, 5"/>
 
                     <Entry 
-                    x:Name="FIOEntry"
-                    Placeholder="Введите ФИО"
+                    x:Name="ToEntry"
+                    Placeholder="Укажите точку прибытия"
+                    IsVisible="True"
+                    TextColor="#222"
+                    Margin="0, 5, 0, 5"/>
+
+                    <DatePicker 
+                    x:Name="ChoiceDatePicker"
                     IsVisible="True"
                     TextColor="#222"
                     Margin="0, 5, 0, 5"/>
 
                     <Entry 
-                    x:Name="GenderEntry"
-                    Placeholder="Введите ФИО"
+                    x:Name="PassengersEntry"
+                    Placeholder="Количество пассажиров"
                     IsVisible="True"
                     TextColor="#222"
-                    Margin="0, 5, 0, 5"/>
-
-
-                    <Entry 
-                    x:Name="PhoneEntry"
-                    Placeholder="Введите ФИО"
-                    IsVisible="True"
-                    TextColor="#222"
-                    Margin="0, 5, 0, 5"/>
+                    Margin="0, 5, 0, 5"
+                    Keyboard="Numeric"/>
 
                     <Entry 
-                    x:Name="RoleEntry"
-                    Placeholder="Введите ФИО"
+                    x:Name="CommentEntry"
+                    Placeholder="Коментарий, описание багажа(Необязательно)"
                     IsVisible="True"
                     TextColor="#222"
                     Margin="0, 5, 0, 5"/>
 
                     <Entry 
-                    x:Name="RatingEntry"
-                    Placeholder="Введите ФИО"
+                    x:Name="PriceEntry"
+                    Placeholder="Предложите цену за поездку(Необязательно)"
                     IsVisible="True"
                     TextColor="#222"
-                    Margin="0, 5, 0, 5"/>
+                    Margin="0, 5, 0, 5"
+                    Keyboard="Numeric"/>
 
+                    <Button x:Name="Order" Clicked="Order_Clicked" Text="Заказать"/>
+                    
                 </StackLayout>
-            </Frame>
 
-        </VerticalStackLayout>
+                <Button x:Name="Check" Clicked="Check_Clicked" Background="red" Text="Check local DB session info(only for test; on prod remove)"/>
+            </VerticalStackLayout>
+        </Frame>
     </ScrollView>
 </ContentPage>
